Fixed all mobile issues- looks AWESOME on mobile now!

--- a/src/containers/Contact/Contact.css
+++ b/src/containers/Contact/Contact.css
@@ -1,5 +1,5 @@
 .Main {
-    padding: 10vh 0;
+    padding: 16vh 0;
     margin: 0 auto;
     width: 80%;
     background-color: #fff;
@@ -53,6 +53,10 @@
     color: #5f7ea2;
 }
 
+.View {
+    padding-top: 5vh
+}
+
 .LogoDiv {
     width: 100%;
     margin: 0 auto 2vh;
@@ -88,7 +92,7 @@
 
 @media only screen and (max-width: 1280px) {
     .Main {
-        padding-top: 16vh;
+        padding-top: 20vh;
         margin: 52px 0 0 0;
         width: 100%;
         background-color: rgba(255, 255, 255, 0.5);
