--- a/src/containers/Portfolio/Portfolio.css
+++ b/src/containers/Portfolio/Portfolio.css
@@ -3,6 +3,7 @@
     min-height: 100vh;
     width: 100%;
     background-color: #FFF;
+    padding-top: 16vh;
 }
 
 .ProjectDiv {
@@ -45,7 +46,6 @@
 @media only screen and (max-width: 599px) {
     .ProjectDiv {
         width: 100%;
-        padding-top: 20vh;
     }
     .Project {
         height: 50vw;
