--- a/src/containers/Resume/Resume.css
+++ b/src/containers/Resume/Resume.css
@@ -1,4 +1,5 @@
 .Main {
+    padding-top: 16vh;
     width: 100%;
     text-align: center;
     background-color: #FFF;
